--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
       </span>
       <h2 class="my-auto hidden min-[320px]:block" >Home</h2>
     </a>
-    <a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/chats"><span class="material-symbols-outlined" style="font-size: 32px">chat</span><h2 class="my-auto hidden min-[320px]:block">Chats</h2></a><a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/search"><span class="material-symbols-outlined" style="font-size: 32px">
+    <a style="cursor: pointer" class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" (click)="connectToWebSocket()"><span class="material-symbols-outlined" style="font-size: 32px">chat</span><h2 class="my-auto hidden min-[320px]:block">Chats</h2></a><a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/search"><span class="material-symbols-outlined" style="font-size: 32px">
         search
       </span>
       <h2 class="my-auto hidden min-[320px]:block">Search</h2>
