--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -17,21 +17,15 @@
       </span>
       <h2 class="my-auto hidden min-[320px]:block" >Home</h2>
     </a>
-<<<<<<< HEAD
-    <a style="cursor: pointer" class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" (click)="connectToWebSocket()"><span class="material-symbols-outlined" style="font-size: 32px">chat</span><h2 class="my-auto hidden min-[320px]:block">Chats</h2></a><a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/search"><span class="material-symbols-outlined" style="font-size: 32px">
-        search
-=======
+
     <a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/friends">
-      <span class="material-symbols-outlined" style="font-size: 32px">
-        group
->>>>>>> main
-      </span>
+      <span class="material-symbols-outlined" style="font-size: 32px">group</span>
       <div class="indicator">
         <span *ngIf="requestsCount() !== 0" class="indicator-item badge badge-secondary badge-sm">{{ requestsCount() }}</span>
         <h2 class="my-auto hidden min-[320px]:block pr-2">Friends</h2>
       </div>
     </a>
-    <a class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" routerLink="/chats">
+    <a style="cursor: pointer" class="flex flex-row gap-2 transition duration-300 min-w-[4rem] justify-center hover:scale-110" (click)="connectToWebSocket()">
       <span class="material-symbols-outlined" style="font-size: 32px">chat</span>
       <h2 class="my-auto hidden min-[320px]:block">Chats</h2>
     </a>
